@@ -18,7 +18,7 @@
 #
 [Global]
 Description=Architects Workbench
-CSN=CSN-awb-372
+CSN=CSN-awb-373
 Name=awb
 Tag=HEAD
 Lock=asim-asimcore
